src/test/ui/nll/issue-31567.stderr
error[E0597]: `*v.0` does not live long enough
  --> $DIR/issue-31567.rs:22:26
   |
LL |     let s_inner: &'a S = &*v.0; //~ ERROR `*v.0` does not live long enough
   |                          ^^^^^ borrowed value does not live long enough
LL |     &s_inner.0
LL | }
   | - borrowed value only lives until here

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0597"
